@@ -17,7 +17,7 @@ remove = Test::More
 [Prereqs]
 Acme::Alien::DontPanic                         = 0.008
 Acme::Ford::Prefect                            = 0.008
-Acme::Ford::Prefect::FFI                       = 0.02
+Acme::Ford::Prefect::FFI                       = 0.03
 Alien::Base                                    = 0.005
 Alien::bz2                                     = 0.14
 Alien::bz2::Installer                          = 0.04
@@ -25,7 +25,7 @@ Alien::Editline                                = 0.02
 Alien::FFI                                     = 0.02
 Alien::gmake                                   = 0.03
 Alien::Libarchive                              = 0.22
-Alien::Libarchive::Installer                   = 0.08
+Alien::Libarchive::Installer                   = 0.09
 Alien::LibYAML                                 = 0.1.2
 Alien::MSYS                                    = 0.07
 Alien::nasm                                    = 0.03
@@ -38,7 +38,7 @@ AnyEvent::Git::Wrapper                         = 0.07
 AnyEvent::Ident                                = 0.06
 AnyEvent::Open3::Simple                        = 0.81
 AnyEvent::WebSocket::Client                    = 0.27
-App::cpangitify                                = 0.10
+App::cpangitify                                = 0.11
 App::RegexFileUtils                            = 0.06
 App::spaceless                                 = 0.05
 App::which_package                             = 0.05
